infra/k8s/blog-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-mongo
  template:
    metadata:
      labels:
        app: blog-mongo
    spec:
      containers:
        - name: blog-mongo
          image: mongo

---
apiVersion: v1
kind: Service
metadata:
  name: blog-mongo-srv # domain name
spec:
  selector:
    app: blog-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
