infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: al-iqraa.com
    http:
      paths:
        - path: /api/v1/?(.*)
          pathType: Prefix
          backend:
            service:
              name: blog-srv
              port:
                number: 5000

        - path: /dashboard
          pathType: Prefix
          backend:
            service:
              name: app-dashboard-srv
              port:
                number: 3002

        - path: /fragment
          pathType: Prefix
          backend:
            service:
              name: app-fragment-srv
              port:
                number: 3001

        - path: /?(.*)
          pathType: Prefix
          backend:
            service:
              name: app-container-srv
              port:
                number: 3000
